--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "minimist": "^1.2.3",
+    "acorn": "^6.4.1",
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "clean-webpack-plugin": "3.0.0",
@@ -30,6 +32,8 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "minimist": "^1.2.3",
+    "acorn": "^6.4.1",
     "bootstrap": "^4.4.1",
     "file-loader": "^5.0.2",
     "jquery": "^3.4.1",
